@@ -1369,7 +1369,21 @@ For the \"inline\" alternatives, also see the variable
 	      (nnmail-fetch-field "to"))))
 	 current-prefix-arg))
   (let ((message-header-setup-hook (copy-sequence message-header-setup-hook))
-	(message-sent-hook (copy-sequence message-sent-hook)))
+	(message-sent-hook (copy-sequence message-sent-hook))
+	;; Honor posting-style for `name' and `address' in Resent-From header.
+	(styles (gnus-group-find-parameter gnus-newsgroup-name
+					   'posting-style t))
+	(user-full-name user-full-name)
+	(user-mail-address user-mail-address)
+	tem)
+    (dolist (style (if styles
+		       (append gnus-posting-styles (list (cons ".*" styles)))
+		     gnus-posting-styles))
+      (when (string-match (pop style) gnus-newsgroup-name)
+	(when (setq tem (cadr (assq 'name style)))
+	  (setq user-full-name tem))
+	(when (setq tem (cadr (assq 'address style)))
+	  (setq user-mail-address tem))))
     ;; `gnus-summary-resend-message-insert-gcc' must run last.
     (add-hook 'message-header-setup-hook
 	      'gnus-summary-resend-message-insert-gcc t)
